# data-analysis

./: .gitignore  EIGSEP_data_explore_v001.ipynb  pyproject.toml
docs/superpowers/plans/: 2026-06-13-rfsoc-dac-leakage.md
docs/superpowers/specs/: 2026-06-13-rfsoc-dac-leakage-design.md
notebooks/: template.ipynb  timing_debug.ipynb
notebooks/2023/: quick_look_night1.ipynb
notebooks/2024/: night1_vivaldi.ipynb  vivaldi.ipynb
notebooks/arp/: Beam_HFSS_to_Healpix.ipynb  EIGSEP Horizons.ipynb  EIGSEP Sims.ipynb  EIGSEP_data_npz_convert.ipynb  EIGSEP_reflections.ipynb
notebooks/charlie/calibration_sparam_materials/: cable_sparams.ipynb
notebooks/christian/: template.ipynb
notebooks/christian/deployment1/: quick_look_night2.ipynb
notebooks/christian/deployment2/: data_explore.ipynb
notebooks/christian/deployment3/: explore.ipynb  night1_vivaldi.ipynb  rfi.ipynb
notebooks/christian/deployment4/: Untitled.ipynb  beam_mapping.ipynb  explore.ipynb  s11_measurements.ipynb
notebooks/christian/deployment5/: quicklook.ipynb  quicklook_jul17.ipynb  quicklook_jul18.ipynb
notebooks/christian/rfsoc_lab_test/: dac_leakage.ipynb  dac_leakage_lib.py  test_dac_leakage_lib.py
notebooks/deployment1/: EIGSEP_data_explore_v001.ipynb  quick_look-oct15_afternoon.ipynb
notebooks/deployment3/: explore.ipynb  lift.ipynb  night1_vivaldi.ipynb
notebooks/deployment4/: motor_steps.ipynb  s11_measurements.ipynb
notebooks/dominic/: beam_mapping.ipynb
notebooks/dominic/deployment4/: EIGSEP_tx_beamsim_mine.ipynb  E_field_attempt.ipynb  clean_beam_sim.ipynb  simulation_compare.ipynb
src/eigsep_data/: __init__.py  data.py  hpm.py  imu.py  io.py  plot.py  plotting.py  quicklook.py  rfi.py  s11.py  sim.py  utils.py
tests/: test_quicklook.py  test_rfi.py
