[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eigsep_data"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    {name = "Christian Hellum Bye", email = "chbye@berkeley.edu"},
]
description = "EIGSEP data analysis"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aipy",
    "astropy",
    "fftvis",
    "matplotlib",
    "matvis",
    "numpy",
    "scipy",
    "eigsep_corr @ git+https://github.com/EIGSEP/eigsep_corr.git@main",
    "eigsep_observing @ git+https://github.com/EIGSEP/eigsep_observing.git@main",
    "healjax @ git+https://github.com/AaronParsons/healjax.git@master",
    "hera_sim @ git+https://github.com/HERA-Team/hera_sim.git@main",
    "pygdsm @ git+https://github.com/telegraphic/pygdsm.git@master",
]

[project.optional-dependencies]
vis = [
    "jupyterlab",
    "jupyterlab-vim",
    "ipympl",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]
all = ["eigsep_data[vis, dev]"]

[project.urls]
Repository = "https://github.com/EIGSEP/data-analysis"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "eigsep_data.__version__"}

[tool.black]
line-length = 79
