[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eigsep_data"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
    {name = "Christian Hellum Bye", email = "chbye@berkeley.edu"},
]
description = "EIGSEP data analysis"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aipy",
    "astropy",
    "croissant-sim",
    # croissant-sim imports spiceypy but doesn't declare it
    "spiceypy",
    "fftvis",
    "h5py",
    "hdf5plugin",
    "healpy",
    "jax",
    "jax-healpy",
    "matplotlib",
    "matvis",
    "numpy",
    "optax",
    "pandas<3",
    "scipy",
    "tqdm",
    "eigsep_corr",
    "eigsep_observing",
    "eigsep_redis",
    "eigsep-vna",
    "picohost",
    "eigsep_terrain @ git+https://github.com/AaronParsons/eigsep_terrain.git@main",
    "healjax @ git+https://github.com/AaronParsons/healjax.git@main",
    "hera_filters @ git+https://github.com/HERA-Team/hera_filters.git@main",
    "hera_qm @ git+https://github.com/HERA-Team/hera_qm.git@main",
    "hera_sim @ git+https://github.com/HERA-Team/hera_sim.git@main",
    "pygdsm",
]

# Field setup: eigsep stack comes from local editable checkouts so code
# can be updated on-site without network access.
[tool.uv.sources]
eigsep_observing = { path = "../eigsep_observing", editable = true }
eigsep_redis = { path = "../eigsep_redis", editable = true }
eigsep-vna = { path = "../cmt_vna", editable = true }
picohost = { path = "../pico-firmware/picohost", editable = true }

[project.scripts]
eigsep-quicklook = "eigsep_data.quicklook:main"

[project.optional-dependencies]
vis = [
    "jupyterlab",
    "jupyterlab-vim",
    "ipympl",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]
all = ["eigsep_data[vis, dev]"]

[project.urls]
Repository = "https://github.com/EIGSEP/data-analysis"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "eigsep_data.__version__"}

[tool.black]
line-length = 79
